[Update] update get history of customer to page